--- a/admin.html
+++ b/admin.html
@@ -245,12 +245,14 @@
                 );
             }
 
-            const totalCases = sessions.completed.reduce((sum, s) => sum + (s.casesData?.length || 0), 0);
+            // Считаем диалоги из ВСЕХ сессий (активных + завершённых)
+            const allSessions = [...sessions.active, ...sessions.completed];
+            const totalCases = allSessions.reduce((sum, s) => sum + (s.casesData?.length || 0), 0);
             const successfulCases = sessions.completed.reduce((sum, s) => sum + (s.casesData?.filter(c => c.payment_result).length || 0), 0);
             const successRate = totalCases > 0 ? Math.round((successfulCases / totalCases) * 100) : 0;
             
-            // Считаем общее количество ответов AI (клиентов)
-            const totalAIResponses = sessions.completed.reduce((sum, s) => {
+            // Считаем общее количество ответов AI (клиентов) из ВСЕХ сессий
+            const totalAIResponses = allSessions.reduce((sum, s) => {
                 return sum + (s.casesData?.reduce((caseSum, c) => {
                     // В dialogue_history хранится массив сообщений
                     // Считаем сообщения где speaker === 'client'
@@ -295,10 +297,12 @@
                                         <div className="bg-purple-50 rounded-lg p-4 text-center">
                                             <div className="text-3xl font-bold text-purple-600">{totalCases}</div>
                                             <div className="text-sm">Диалогов</div>
+                                            <div className="text-xs text-gray-500 mt-1">(всего проведено)</div>
                                         </div>
                                         <div className="bg-pink-50 rounded-lg p-4 text-center">
                                             <div className="text-3xl font-bold text-pink-600">{totalAIResponses}</div>
                                             <div className="text-sm">Ответов AI</div>
+                                            <div className="text-xs text-gray-500 mt-1">(включая активные)</div>
                                         </div>
                                         <div className="bg-orange-50 rounded-lg p-4 text-center">
                                             <div className="text-3xl font-bold text-orange-600">{successRate}%</div>
